# gamma

./: .gitignore
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-cfab643ea6acd7b6c9f0.json  cmakeFiles-v1-3083f557284275a3baa5.json  cmakeFiles-v1-6f6c74b45cb031993b7d.json  index-2023-10-22T10-24-48-0330.json
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-c2b1a7d318b5f70c364c.json  codemodel-v2-de7304288a5e627f89ed.json  index-2023-10-21T12-00-29-0064.json  target-test-Debug-3464220ef564397e9d0c.json  target-test_autogen-Debug-f4b50471e588cfdaf1d8.json
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QTableView.3D44F6D6DA70F42A.idx  __stddef_max_align_t.h.BFCB2F76833C7689.idx  __stddef_max_align_t.h.FA563F3F18C407BF.idx  cstddef.1B1660D44A2E846D.idx  deviceinfo.cpp.B717FFCB48E81B86.idx  deviceinfo.h.497328ED852EF152.idx  limits.h.69416D7870737356.idx  limits.h.936FAC89EC2DCCF5.idx  (+31 more)
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/test.app/Contents/: Info.plist
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/test.app/Contents/MacOS/: test
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/test_autogen/: mocs_compilation.cpp
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/test_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/test_autogen/MMII47GADZ/: moc_deviceinfo.cpp  moc_deviceinfo.cpp.d
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/test_autogen/PNK5WDWK6L/: qrc_res.cpp
build-test-Desktop_x86_darwin_generic_mach_o_64bit-Debug/test_autogen/include/: ui_deviceinfo.h  ui_mainwindow.h
test/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/ListWidgets/: IListObject.h  TabButton.cc  TabButton.h  customdialog.ui  deviceinfo.cpp  deviceinfo.h  deviceinfo.ui  itemslist.cpp  itemslist.h  listobjectwrapper.cc  listobjectwrapper.h
test/StyleClasses/: listobjectwrapper.cc  listobjectwrapper.h  listobjectwrapper.ui  stylesetter.cpp  stylesetter.h
test/res/: res.qrc
test/res/data/: data.json
test/res/styles/: Style.css  aboba.css  dialogStyle.css  itemStyle.css  mainTabsStyle.css
